--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,6 @@ Standards-Version: 3.7.2
 Package: openpanel-openapp-mod-joomla
 Architecture: any
 Pre-Depends: openpanel-core, openpanel-authd
-Depends: openpanel-core (>= 0.8.3), openpanel-coreval, openpanel-api-sh, openpanel-openapp-passwd, ${shlibs:Depends}, ${misc:Depends}
-Provides: openpanel-mod-joomla
-Conflicts: openpanel-mod-joomla
+Depends: openapp-joomla, openpanel-core, openpanel-coreval, openpanel-api-sh, openpanel-openapp-passwd, ${shlibs:Depends}, ${misc:Depends}
 Description: OpenPanel module to manage OpenApp Joomla
   manage the OpenApp Joomla
