--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Standards-Version: 3.7.2
 Package: openpanel-openapp-mod-joomla
 Architecture: any
 Pre-Depends: openpanel-core, openpanel-authd
-Depends: openapp-joomla, openpanel-openapp-mod-user, openpanel-core, openpanel-api-sh, openpanel-openapp-passwd, ${shlibs:Depends}, ${misc:Depends}
+Depends: openapp-joomla, openpanel-openapp-mod-user, openpanel-core, openpanel-api-sh, openpanel-openapp-call, ${shlibs:Depends}, ${misc:Depends}
 Description: OpenPanel module to manage OpenApp Joomla
   manage the OpenApp Joomla
