--- a/debian/rules
+++ b/debian/rules
@@ -14,13 +14,19 @@ BUILD_ROOT=$(CURDIR)/debian/tmp
 install:
 	rm -rf ${BUILD_ROOT}
 	mkdir -p ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module
+	mkdir -p ${BUILD_ROOT}/var/openpanel/wallpaper
+	mkdir -p ${BUILD_ROOT}/var/openpanel/http/images
 	install -m 755 action ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/action
 	cp module.xml ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/module.xml
 	cp *.png ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/
+	mv ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/logo.png ${BUILD_ROOT}/var/openpanel/http/images/OpenPanelLogo.png
+	cp wallpaper.jpg ${BUILD_ROOT}/var/openpanel/wallpaper/default.jpg
 	install -m 755 verify ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/verify
 
 build:
 	mkmodulexml < module.def > module.xml
+	convert -modulate 50,100,100 joomla.png down_joomla.png
+	convert wallpaper.png wallpaper.jpg
 binary-indep:
 
 binary-arch binary: build install
