--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,7 @@ install:
 	install -m 755 action ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/action
 	cp module.xml ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/module.xml
 	cp *.png ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/
+	cp joomla.html ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/
 	mv ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/logo.png ${BUILD_ROOT}/var/openpanel/http/images/OpenPanelLogo.png
 	cp wallpaper.jpg ${BUILD_ROOT}/var/openpanel/wallpaper/default.jpg
 	install -m 755 verify ${BUILD_ROOT}/var/openpanel/modules/OpenAppJoomla.module/verify
