--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 5), openpanel-dev, imagemagick
 Standards-Version: 3.7.2
 
 Package: openpanel-openapp-mod-joomla
-Architecture: any
+Architecture: all
 Pre-Depends: openpanel-core, openpanel-authd
 Depends: openapp-joomla, openpanel-openapp-mod-user, openpanel-core, openpanel-api-sh, openpanel-openapp-call, ${shlibs:Depends}, ${misc:Depends}, openpanel-validatepem, openapp-awstats
 Description: OpenPanel module to manage OpenApp Joomla
